--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ sauce_connect.log*
 /yarn.lock
 node_modules
 /handlebars-release.tgz
+.nyc_output
 
 # Generated files
 lib/handlebars/compiler/parser.js
