--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@knappi/grunt-saucelabs": "^9.0.2",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "aws-sdk": "^2.1.49",
     "babel-loader": "^5.0.0",
     "babel-runtime": "^5.1.10",
@@ -66,6 +68,7 @@
     "mustache": "^2.1.3",
     "nyc": "^14.1.1",
     "prettier": "^1.19.1",
+    "semantic-release": "^17.0.4",
     "semver": "^5.0.1",
     "sinon": "^7.5.0",
     "typescript": "^3.4.3",
