--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "source-map": "^0.6.1",
     "yargs": "^15.3.1"
   },
-  "optionalDependencies": {
+  "peerDependencies": {
     "uglify-js": "^3.1.4"
   },
   "devDependencies": {
@@ -69,6 +69,7 @@
     "semver": "^5.0.1",
     "sinon": "^7.5.0",
     "typescript": "^3.4.3",
+    "uglify-js": "^3.1.4",
     "underscore": "^1.5.1",
     "webpack": "^1.12.6",
     "webpack-dev-server": "^1.12.1"
