--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "husky": "^3.1.0",
     "jison": "~0.3.0",
     "karma": "^5.0.5",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-mocha": "^2.0.1",
+    "karma-requirejs": "^1.1.0",
     "karma-sauce-launcher": "^4.1.4",
     "lint-staged": "^9.5.0",
     "mocha": "^5",
