--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": ">=10"
   },
   "dependencies": {
+    "@handlebars/parser": "^1.1.0",
     "neo-async": "^2.6.0",
     "source-map": "^0.6.1",
     "yargs": "^15.3.1"
