Move `integration-testing`-folder in `tests`-folder
Third part of reorganizing and cleaning up test-folders.

--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,5 @@ node_modules
 lib/handlebars/compiler/parser.js
 /coverage/
 /dist/
-/integration-testing/*/dist/
+/tests/integration/*/dist/
 /spec/tmp/*
