Enable IDE code-highlighting for bin-file
By adding the `.js`-extension to the bin-file, IDEs will
know that js code-highlighting should be applied to the
file, which makes it easier for devs to read the code.

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "./runtime": "./dist/cjs/handlebars.runtime.js"
   },
   "bin": {
-    "handlebars": "bin/handlebars"
+    "handlebars": "bin/handlebars.js"
   },
   "scripts": {
     "build": "grunt build",
