--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-compat": "^3.13.0",
-    "eslint-plugin-es5": "^1.4.1",
     "fs-extra": "^8.1.0",
     "grunt": "^1.0.4",
     "grunt-babel": "^5.0.0",
@@ -112,6 +111,13 @@
     "runtime.js",
     "types/*.d.ts",
     "runtime.d.ts"
+  ],
+  "browserslist": [
+    "last 2 versions",
+    "Firefox ESR",
+    "not dead",
+    "not IE 11",
+    "maintained node versions"
   ],
   "husky": {
     "hooks": {
