--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "prettier": "^1.19.1",
     "semver": "^5.0.1",
     "sinon": "^7.5.0",
-    "typescript": "^3.4.3",
+    "typescript": "^3.9.10",
     "uglify-js": "^3.1.4",
     "underscore": "^1.5.1",
     "webpack": "^1.12.6",
@@ -83,6 +83,7 @@
   },
   "scripts": {
     "build": "grunt build",
+    "build:types": "tsc types/index.ts --declaration --emitDeclarationOnly --outDir types",
     "format": "prettier --write '**/*.js' && eslint --fix .",
     "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:types",
     "lint:eslint": "eslint --max-warnings 0 .",
