--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   "main": "lib/index.js",
   "types": "types/index.d.ts",
   "browser": {
-    ".": "./dist/cjs/handlebars.js",
+    "./lib/index.js": "./dist/cjs/handlebars.js",
     "./runtime": "./dist/cjs/handlebars.runtime.js"
   },
   "bin": {
