--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "MIT",
   "readmeFilename": "README.markdown",
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "dependencies": {
     "@handlebars/parser": "^1.1.0",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@definitelytyped/dtslint": "^0.0.100",
-    "@playwright/test": "^1.17.1",
+    "@playwright/test": "^1.27.1",
     "aws-sdk": "^2.1.49",
     "babel-loader": "^5.0.0",
     "babel-runtime": "^5.1.10",
@@ -47,15 +47,15 @@
     "fs-extra": "^8.1.0",
     "grunt": "^1.0.4",
     "grunt-babel": "^5.0.0",
-    "grunt-bg-shell": "^2.3.3",
     "grunt-cli": "^1",
     "grunt-contrib-clean": "^1",
     "grunt-contrib-concat": "^1",
-    "grunt-contrib-connect": "^1",
+    "grunt-contrib-connect": "^3.0.0",
     "grunt-contrib-copy": "^1",
     "grunt-contrib-requirejs": "^1",
     "grunt-contrib-uglify": "^1",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-shell": "^4.0.0",
     "grunt-webpack": "^1.0.8",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
@@ -106,7 +106,6 @@
   "files": [
     "bin",
     "dist/*.js",
-    "dist/amd/**/*.js",
     "dist/cjs/**/*.js",
     "lib",
     "release-notes.md",
