--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "concurrently": "^5.0.0",
     "dirty-chai": "^2.0.1",
     "dustjs-linkedin": "^2.0.2",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-compat": "^3.13.0",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-compat": "4.0",
     "fs-extra": "^8.1.0",
     "grunt": "^1.0.4",
     "grunt-babel": "^5.0.0",
