Adds prepare script so dist is built automatically.

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "handlebars": "bin/handlebars"
   },
   "scripts": {
+    "prepare": "$(npm bin)/grunt build",
     "build": "grunt build",
     "format": "prettier --write '**/*.js' && eslint --fix .",
     "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:types",
