--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "dirty-chai": "^2.0.1",
     "dustjs-linkedin": "^2.0.2",
     "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-compat": "4.0",
     "fs-extra": "^8.1.0",
     "grunt": "^1.0.4",
@@ -62,7 +62,7 @@
     "mock-stdin": "^0.3.0",
     "mustache": "^2.1.3",
     "nyc": "^14.1.1",
-    "prettier": "^2.7.1",
+    "prettier": "^3.0.0",
     "semver": "^5.0.1",
     "sinon": "^7.5.0",
     "typescript": "^3.4.3",
@@ -81,7 +81,7 @@
     "build": "grunt build",
     "release": "grunt release",
     "publish:aws": "npm run test:tasks && grunt && grunt publish-to-aws",
-    "format": "prettier --write '**/*.js' && eslint --fix .",
+    "format": "prettier --write '**/*.{js,css,json,md}' && eslint --fix .",
     "lint": "npm run lint:eslint && npm run lint:prettier && npm run lint:types",
     "lint:eslint": "eslint --max-warnings 0 .",
     "lint:prettier": "prettier --check '**/*.js'",
@@ -127,7 +127,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,css,json}": [
+    "*.{js,css,json,md}": [
       "prettier --write",
       "git add"
     ],
