--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "barename": "handlebars",
   "version": "4.7.8",
   "description": "Handlebars provides the power necessary to let you build semantic templates effectively with no frustration",
-  "homepage": "https://www.handlebarsjs.com/",
+  "homepage": "https://handlebarsjs.com/",
   "keywords": [
     "handlebars",
     "mustache",
