Coerce `noEscape`-statements to a string
Also removed `chai-diff`-dependency, since
it is unmaintained and not that useful.

Fixes #1838

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,9 @@ indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[spec/expected/*.js]
+insert_final_newline = false
+
 [*.yml]
 indent_size = 2
 insert_final_newline = true
