--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "uglify-js": "^3.1.4"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.385.0",
     "@playwright/test": "^1.17.1",
-    "aws-sdk": "^2.1.49",
+    "aws-sdk": "^2.1430.0",
     "babel-loader": "^5.0.0",
     "babel-runtime": "^5.1.10",
     "benchmark": "~1.0",
