--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "uglify-js": "^3.1.4"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.449.0",
     "@definitelytyped/dtslint": "^0.0.100",
     "@playwright/test": "^1.36.1",
-    "aws-sdk": "^2.1.49",
     "babel-loader": "^5.0.0",
     "babel-runtime": "^5.1.10",
     "benchmark": "~1.0",
