fuzz: initial integration  - Adds initial fuzz_target for Handlebars.compile()  - Adds Jazzer.js as dev-dependency  - Adds fuzzing on Github CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,10 @@ jobs:
           cd ./tests/integration/webpack-babel-test && ./test.sh && cd -
           cd ./tests/integration/webpack-test && ./test.sh && cd -
 
+      - name: Fuzz Test
+        # Runs for 2 minutes
+        run: cd ./fuzz && ./test.sh 120 && cd -
+
   browser:
     name: Test (Browser)
     runs-on: 'ubuntu-22.04'
